--- a/trunk/index.html
+++ b/trunk/index.html
@@ -12,13 +12,12 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 </CENTER>
 
-<P> <A
- HREF="http://www.switch.ch/misc/leinen/snmp/perl/snmp.tar.gz">This
- archive</A> (also available via <a
- href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">FTP</a>)
- contains Perl 5 modules <tt>SNMP_Session.pm</tt> and <tt>BER.pm</tt>,
- which, when used together, provide rudimentary access to remote SNMP
- (v1) agents. </P>
+<P> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
+ <tt>BER.pm</tt>, which, when used together, provide rudimentary
+ access to remote SNMP (v1) agents.  It can be downloaded from the FTP
+ directory <a
+ href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">ftp://ftp.switch.ch/software/sources/network/snmp/perl/</a>.
+ </P>
 
 <H2>Features</H2>
 
