--- a/trunk/index.html
+++ b/trunk/index.html
@@ -44,6 +44,9 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> SNMP_util.pm 0.57: Small change to avoid warnings with "-w" when
+session parameters are defaulted.
+
 <li> SNMP_util.pm 0.56: New subroutine <tt>snmpmapOID</tt>, <a
 href="mailto:mcm@unx.sas.com">Mike Mitchell</a>.
 
@@ -471,7 +474,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19981211
+19981221
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
