Added note about bind() error message fix.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> SNMP_Session.pm 0.65: Fix error message when binding to UDP port
+fails (<a href="mailto:jzhukovs@staff.juno.com">Jonathan
+Zhukovsky</a>).
+
 <li> SNMP_util.pm 0.57: Small change to avoid warnings with "-w" when
 session parameters are defaulted.
 
@@ -474,7 +478,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19981221
+19990103
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
