Document agent methods.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> SNMP_Session.pm 0.68: Added methods <tt>receive_request</tt> and
+<tt>decode_request</tt> to support SNMP agents.  Contributed by <a
+href="mailto:mikem@open.com.au">Mike McCauley</a>.
+
 <li> SNMP_Session.pm 0.67: Implement a <tt>map_table_start_end</tt>
 method for <tt>SNMPv2c_Session</tt> which uses <tt>getBulk</tt>.  See
 <a href="#map-table-4-use">Walking Tables With <tt>getBulk</tt></a>
