--- a/trunk/index.html
+++ b/trunk/index.html
@@ -40,6 +40,10 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> SNMP_util.pm 0.70: <a href="mailto:mcm@unx.sas.com">Mike
+Mitchell</a> added code for parsing MIB files.  See the description of
+<tt>snmpMIB_to_OID</tt> in <tt>README.SNMP_util</tt>.
+
 <li> SNMP_util.pm 0.69: Enable parsing of community strings which
 contain <samp>@</samp> characters.
 
@@ -550,7 +554,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19990310
+19990407
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
