Added pointer to README.SNMP_util file.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <li> SNMP_util.pm 0.70: <a href="mailto:mcm@unx.sas.com">Mike
 Mitchell</a> added code for parsing MIB files.  See the description of
-<tt>snmpMIB_to_OID</tt> in <tt>README.SNMP_util</tt>.
+<tt>snmpMIB_to_OID</tt> in <a
+href="README.SNMP_util"><tt>README.SNMP_util</tt></a>.
 
 <li> SNMP_util.pm 0.69: Enable parsing of community strings which
 contain <samp>@</samp> characters.
