--- a/trunk/index.html
+++ b/trunk/index.html
@@ -7,15 +7,23 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5</H1>
 
-  <H3>Author: <A HREF="http://www.switch.ch/misc/leinen/">Simon
-Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
+  <p> Copyright (c) 1995-1999, Simon Leinen<br>
+  All rights reserved </p>
+
+  <em> This program is free software; you can redistribute it under
+  the <a href="http://language.perl.com/misc/Artistic.html">"Artistic
+  License"</a> included in this distribution. </em>
+
+  <p>Author: <A HREF="http://www.switch.ch/misc/leinen/">Simon
+Leinen</A> &lt;<A
+HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 </DIV>
 
 <P> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
  <tt>BER.pm</tt>, which, when used together, provide rudimentary
- access to remote SNMP (v1) agents.  It can be downloaded from the FTP
- directory <a
+ access to remote SNMP (v1/v2) agents.  It can be downloaded from the
+ FTP directory <a
  href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">ftp://ftp.switch.ch/software/sources/network/snmp/perl/</a>.
  </P>
 
@@ -39,6 +47,9 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> SNMP_Session 0.74: Put under copyright and Artistic
+License. </li>
 
 <li> SNMP_Session 0.73: The UDP socket associated with each SNMP
 session object is now created using <tt>IO::Socket::INET->new</tt>.
@@ -579,7 +590,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19990902
+19990913
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
